<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="5dp"
    android:background="@drawable/account_shape"
    android:orientation="vertical"
    >


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/item_main_layout"
        android:orientation="horizontal"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/item_text1"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:textStyle="bold"
            android:text="@string/bank_name"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/item_text2"
            android:layout_marginTop="20dp"
            android:textStyle="bold"
            android:text="@string/my_account"
            android:layout_marginLeft="8dp"/>
        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/vert"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="15dp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/item_main_layout2"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:text="@string/my_money"
            android:textSize="30sp"
            android:layout_marginLeft="20dp"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="20sp"
            android:textSize="12sp"
            android:background="@drawable/listitem_shape"
            android:layout_marginLeft="10dp"
            android:text="거래내역"/>
    </LinearLayout>
</LinearLayout>