<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/main_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/layout1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/alarm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20sp"
                android:gravity="left"
                android:src="@drawable/alarm2" />

            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="right"
                android:layout_marginRight="10sp"
                android:src="@drawable/one" />

            <ImageView
                android:id="@+id/search"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginRight="10sp"
                android:gravity="right"
                android:src="@drawable/search2" />

            <ImageView
                android:id="@+id/navi"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginRight="20sp"
                android:gravity="right"
                android:src="@drawable/order2" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:orientation="horizontal"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/layout1">

            <ImageView
                android:id="@+id/top1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20sp"
                android:src="@drawable/top1" />

            <TextView
                android:id="@+id/ant_search"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_marginTop="5sp"
                android:text="@string/search_ant"
                android:textStyle="bold" />

            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1" />

            <ImageView
                android:id="@+id/top2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/top2" />

            <TextView
                android:id="@+id/ant_send"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_marginTop="5sp"
                android:text="@string/send_money"
                android:textStyle="bold" />

            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1" />

            <ImageView
                android:id="@+id/top3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/top3" />

            <TextView
                android:id="@+id/open_bank"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_marginTop="5sp"
                android:text="@string/open_banking"
                android:textStyle="bold" />

            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1" />

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/account"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_marginRight="20sp"
                android:theme="@style/SCBSwitch"
                android:textOff="@string/toggle_btn"
                android:textOn="@string/toggle_btn"
                app:switchTextAppearance="string/toggle_btn"
                android:checked="true"
                app:showText="true" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/account_shape"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/item_main_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/item_text1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="20dp"
                    android:text="@string/bank_name"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/item_text2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:layout_marginTop="20dp"
                    android:text="@string/my_account"
                    android:textStyle="bold" />

                <ImageButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="40dp"
                    android:layout_marginTop="15dp"
                    android:src="@drawable/vert" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/item_main_layout2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:text="@string/my_money"
                    android:textSize="30sp"
                    android:textStyle="bold" />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="20sp"
                    android:layout_marginLeft="10dp"
                    android:background="@drawable/listitem_shape"
                    android:text="거래내역"
                    android:textSize="12sp" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="#28CDC7C7"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/main_layout">

        <TableLayout
            android:id="@+id/tableLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TableRow>

                <TextView
                    android:id="@+id/row1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="40dp"
                    android:text="@string/table1" />

                <View
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_weight="1" />

                <TextView
                    android:id="@+id/row2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/table2" />

                <View
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_weight="1" />

                <TextView
                    android:id="@+id/row3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/table3" />

                <View
                    android:layout_width="0dp"
                    android:layout_height="3dp"
                    android:layout_weight="1" />

                <TextView
                    android:id="@+id/row4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="40dp"
                    android:text="@string/table4" />
            </TableRow>

            <FrameLayout
                android:id="@+id/main_frame"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/frame_recycler1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />
            </FrameLayout>

        </TableLayout>
    </RelativeLayout>


</androidx.constraintlayout.widget.ConstraintLayout>